--- a/app/index.html
+++ b/app/index.html
@@ -9,8 +9,8 @@
     <div id="main">
     	
     	<div class="header">
-			<h1>File too big for email? Use BoxSendIt.</h1>
-			<h2>No need to register!</h2>
+			<h1>File too big for email? Use SendBox.</h1>
+			<h2></h2>
 		</div>
 
 		<form id="boxsendit" method="post" enctype="multipart/form-data" action="/upload.php" class="uniForm">
